fix pointless horizontal scrollbar

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -619,7 +619,6 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
   text-align: center;
   background: url(../images/background.png) #b23e90;
   -moz-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.75);
